--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                 <div class="inst">
                     <img src="imge/icon-insta.png" alt="">
                     <h3>INSTAGRAM</h3>
-                    <p>@mariaraujocantora</p>
+                    <p><a href="https://www.instagram.com/araujomaricantora" target="_blank">@mariaraujocantora</a></p>
                 </div>
             </div>
         </div>
