--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <section class="pq">
         <div class="center3">
             <h2>Por que escolher ela?</h2>
-            <p class="ela">Escolher Maria Araújo para cantar é apostar em uma voz única e envolvente que conquista qualquer público. Sua habilidade vocal, combinada com uma presença de palco cativante. Maria não apenas canta, ela cria uma conexão verdadeira com quem a ouve. Com dedicação e paixão pela música, ela é a escolha perfeita para quem busca uma artista que vai deixar todos encantados pelo seu talento.</p>
+            <p class="ela">Escolher Maria Araújo para cantar é apostar em uma voz única e envolvente que conquista qualquer público. Sua habilidade vocal, combinada com uma presença de palco cativante. Com dedicação e paixão pela música, ela é a escolha perfeita para quem busca uma artista que vai deixar todos encantados pelo seu talento.</p>
             <div class="card">
                  
                 <div class="hab">
