--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         <div class="center4">
             <div class="contao">
                 <h2>Informações de Contato</h2>
-                <p>Estou sempre disponível para discutir projetos e oportunidades.Seja para um evento íntimo ou uma grande celebração, vamos conversar sobre como criar uma experiência musical inesquecível</p>
+                <p>Está sempre disponível para discutir oportunidades. Seja para um evento íntimo ou uma celebração, converse com ela para criar uma experiência inesquecível</p>
             </div>
 
             <div class="row">
