--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="content">
                 <div class="center">
                     <img src="imge/vc1.jpg" alt="Maria">
-                    <h1>MARIA ARAUJO</h1>
+                    <h1>MARI ARAUJO</h1>
                     <p>Cantora</p>
                 </div>
             </div>
@@ -58,7 +58,7 @@
     <section class="pq">
         <div class="center3">
             <h2>Por que escolher ela?</h2>
-            <p class="ela">Escolher Maria Araújo para cantar é apostar em uma voz única e envolvente que conquista qualquer público. Sua habilidade vocal, combinada com uma presença de palco cativante. Com dedicação e paixão pela música, ela é a escolha perfeita para quem busca uma artista que vai deixar todos encantados pelo seu talento.</p>
+            <p class="ela">Escolher Mari Araújo para cantar é apostar em uma voz única e envolvente que conquista qualquer público. Sua habilidade vocal, combinada com uma presença de palco cativante gaz ela ser uma cantora única. Com dedicação e paixão pela música, ela é a escolha perfeita para quem busca uma artista que vai deixar todos encantados pelo seu talento.</p>
             <div class="card">
                  
                 <div class="hab">
