Atualizar o index.html2

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="content">
                 <div class="center">
                     <img src="imge/vc1.jpg" alt="Maria">
-                    <h1>MARI ARAUJO</h1>
+                    <h1>MARI ARAÚJO</h1>
                     <p>Cantora</p>
                 </div>
             </div>
