Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <section class="pq">
         <div class="center3">
             <h2>Por que escolher ela?</h2>
-            <p class="ela">Escolher Mari Araújo para cantar é apostar em uma voz única e envolvente que conquista qualquer público. Sua habilidade vocal, combinada com uma presença de palco cativante gaz ela ser uma cantora única. Com dedicação e paixão pela música, ela é a escolha perfeita para quem busca uma artista que vai deixar todos encantados pelo seu talento.</p>
+            <p class="ela">Escolher Mari Araújo para cantar é apostar em uma voz única e envolvente que conquista qualquer público. Sua habilidade vocal, combinada com uma presença de palco cativante faz ela ser uma cantora única. Com dedicação e paixão pela música, ela é a escolha perfeita para quem busca uma artista que vai deixar todos encantados pelo seu talento.</p>
             <div class="card">
                  
                 <div class="hab">
