--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
     <section class="contato">
         <div class="center4">
             <div class="contao">
+                <img src="imge/alb5.jpg" alt="" class="img2">
                 <h2>Informações de Contato</h2>
                 <p>Está sempre disponível para discutir oportunidades. Seja para um evento íntimo ou uma celebração, converse com ela para criar uma experiência inesquecível</p>
             </div>
